[gd_scene load_steps=8 format=3 uid="uid://dh2bahnrqgi57"]

[ext_resource type="Texture2D" uid="uid://cogh53dbxxt64" path="res://assets/idle.png" id="1_50xgd"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_fx17r"]
[ext_resource type="PackedScene" uid="uid://cplg772x4a7pj" path="res://scenes/tongue.tscn" id="3_tt86v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g62ff"]
size = Vector2(23, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rh70"]
atlas = ExtResource("1_50xgd")
region = Rect2(0, 0, 33, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5skiu"]
atlas = ExtResource("1_50xgd")
region = Rect2(33, 0, 33, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_x1sp1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rh70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5skiu")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[node name="Player" type="RigidBody2D"]
lock_rotation = true
contact_monitor = true
max_contacts_reported = 99
script = ExtResource("1_fx17r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 5)
shape = SubResource("RectangleShape2D_g62ff")

[node name="TongueRay" type="RayCast2D" parent="."]
target_position = Vector2(200, 0)
collision_mask = 7

[node name="Tongue" parent="." instance=ExtResource("3_tt86v")]
position = Vector2(15, -4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x1sp1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.575071

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
